[gd_scene load_steps=7 format=3 uid="uid://u7xnxhshu1v2"]

[ext_resource type="Script" path="res://Ruleta.gd" id="1_vn1l2"]
[ext_resource type="Texture2D" uid="uid://mshtuqnwxp23" path="res://img/pixil-frame-0.png" id="2_r2te4"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_61ww4"]
a = Vector2(-11, -111)
b = Vector2(-110, -13)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_6g0tx"]
a = Vector2(-109, 17)
b = Vector2(-8, 105)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_wlfgu"]
a = Vector2(101, 18)
b = Vector2(18, 107)

[sub_resource type="SegmentShape2D" id="SegmentShape2D_qymyi"]
a = Vector2(105, -13)
b = Vector2(16, -98)

[node name="Node2D" type="Node2D"]
script = ExtResource("1_vn1l2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-8.58307e-06, -24.25)
scale = Vector2(5.46, 5.515)
texture = ExtResource("2_r2te4")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(-1, 1)
shape = SubResource("SegmentShape2D_61ww4")

[node name="Area2D2" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource("SegmentShape2D_6g0tx")

[node name="Area2D3" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource("SegmentShape2D_wlfgu")

[node name="Area2D4" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D4"]
shape = SubResource("SegmentShape2D_qymyi")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_entered" from="Area2D2" to="." method="_on_area_2d_2_area_entered"]
[connection signal="area_entered" from="Area2D3" to="." method="_on_area_2d_3_area_entered"]
[connection signal="area_entered" from="Area2D4" to="." method="_on_area_2d_4_area_entered"]
